--- a/css/styles.css
+++ b/css/styles.css
@@ -42,15 +42,50 @@ button:hover {
 }
 
 #user-list {
-    max-width: 600px;
-    margin: 20px auto;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
-#user-list div {
-    margin-bottom: 10px;
+#sort-options {
+    margin-bottom: 20px;
 }
 
-#user-container div {
-    margin: 5px 0;
+#pagination-controls {
+    margin-top: 20px;
+    text-align: center;
+}
+
+#user-details-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
     cursor: pointer;
 }
